added chatstate
